yippee we can now add DCO incidents

--- a/psc/templates/psc/dco_incident_list.html
+++ b/psc/templates/psc/dco_incident_list.html
@@ -19,7 +19,7 @@
 					<th>G</th>
 					<th>J</th>
 					<th>K</th>					
-                                        <th>&nbsp;</th>
+                                        <th><a href="{% url psc.views.dco_incident_add  %}">Add Incident</a></th>
                                     </tr>
                                 </thead>
 				{% for cl in checklists.object_list %}
