ability to reset a filter

--- a/psc/templates/psc/vr_checklist_list.html
+++ b/psc/templates/psc/vr_checklist_list.html
@@ -1,12 +1,29 @@
 {% extends 'psc/layout.html' %}
 {% load query_string %}
+{% block javascripts %}
+{{ block.super }}
+<script src="/assets/js/jquery-1.4.4.min.js" type="text/javascript" charset="utf-8"></script>
+<script type="text/javascript" charset="utf-8">
+	$(function() {
+		$("#reset").click(function () {
+			$("#id_zone").val("");
+			$("#id_state").val("");
+			$("#id_district").val("");
+			$("#id_day").val("");
+			$("#id_status").val(0);
+			$("#id_observer_id").val("");
+			$("#filter_form").submit();
+		});
+	});
+</script>
+{% endblock %}
 {% block content %}
 <div class="grid_16">
 	<div class="box" style="padding-bottom:1em"> 
-		<h2>Voter's Registration Checklist and Incidents</h2>
+		<h2>Voter's Registration Checklists</h2>
 		<div class="block">
 			<div id="filter">
-				<form action="" method="get" accept-charset="utf-8">
+				<form action="" method="get" id="filter_form" accept-charset="utf-8">
 					<table>
 						<thead>
 							<tr>
@@ -22,7 +39,7 @@
 								{% for field in filter_form %}
 								<td>{{ field }}</td>
 								{% endfor %}
-								<td><input type="button" value="reset"></td>
+								<td><input type="button" value="reset" id="reset"></td>
 								<td><input type="submit" value="filter &rarr;"></td>
 							</tr>
 						</tbody>
