--- a/psc/templates/psc/layout.html
+++ b/psc/templates/psc/layout.html
@@ -10,6 +10,8 @@
 		<link rel="stylesheet" type="text/css" href="/assets/css/nav.css" media="screen" />
 		<!--[if IE 6]><link rel="stylesheet" type="text/css" href="/assets/css/ie6.css" media="screen" /><![endif]-->
 		<!--[if IE 7]><link rel="stylesheet" type="text/css" href="/assets/css/ie.css" media="screen" /><![endif]-->
+		{% block javascripts %}
+		{% endblock %}
 		</head>
 	<body>
 		<div class="container_16">
@@ -26,7 +28,7 @@
 						<a href="#">Voter's Registration</a>
 						<ul>
 							<li>
-								<a href="#">Checklist</a>
+								<a href="{% url psc.views.vr_checklist_list %}">Checklist</a>
 							</li>
 							<li>
 								<a href="#">Incidents</a>
