--- a/psc/templates/psc/vr_checklist_list.html
+++ b/psc/templates/psc/vr_checklist_list.html
@@ -49,11 +49,10 @@
 			<table>
 				<thead>
 				<tr>
+					<th>Observer ID</th>
 					<th>Date</th>
-					<th>RC</th>
-					<th>RCID</th>
 					<th>LGA</th>
-					<th>District</th>
+					<th>SD</th>
 					<th>State</th>
 					<th>Observer</th>
 					<th>Supervisor</th>
@@ -65,9 +64,8 @@
 				</thead>
 				{% for cl in checklists.object_list %}
 				<tr{% cycle '' ' class="odd"' %}>
+					<td>{{ cl.observer.observer_id }}</td>
 					<td>{{ cl.date|date:"d/m/Y" }}</td>
-					<td>{% firstof cl.report_rc cl.location.name|default:"Unknown" %}</td>
-					<td>{% firstof cl.report_rcid cl.location.code|default:"999" %}</td>
 					<td>{{ cl.observer.location.name|default:"Uknown" }}</td>
 					<td>{{ cl.observer.location.parent.name|default:"Uknown" }}</td>
 					<td>{{ cl.observer.location.parent.parent.name|default:"Uknown" }}</td>
