Did some house clearing

--- a/psc/templates/psc/vr_incident_list.html
+++ b/psc/templates/psc/vr_incident_list.html
@@ -23,7 +23,7 @@
 					<th>N</th>
 					<th>P</th>
 					<th>Q</th>
-                                        <th>&nbsp;</th>
+                                        <th><a href="{% url psc.views.vr_incident_add  %}">Add Incident</a></th>
                                     </tr>
                                 </thead>
 				{% for cl in checklists.object_list %}
