--- a/psc/templates/psc/dco_checklist_list.html
+++ b/psc/templates/psc/dco_checklist_list.html
@@ -1,75 +1,91 @@
 {% extends 'psc/layout.html' %}
+{% load query_string %}
 {% block content %}
 <div class="grid_16">
 	<div class="box"> 
-		<h2>Display Claims &amp; Objections</h2>
+		<h2>Display Claims &amp; Objections Checklists</h2>
 		<div class="block">
+			<div id="filter">
+				<form action="" method="get" id="filter_form" accept-charset="utf-8">
+					<table>
+						<thead>
+							<tr>
+								{% for field in filter_form %}
+								<th>{{ field.label }}</th>
+								{% endfor %}
+								<th>&nbsp;</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								{% for field in filter_form %}
+								<td>{{ field }}</td>
+								{% endfor %}
+								<td><input type="button" value="reset" id="reset">
+								<input type="submit" value="filter &rarr;"></td>
+							</tr>
+						</tbody>
+					</table>
+				</form>
+			</div>
 			<table>
-				<tr class="odd">
-					<th>Date</th>
-					<th>Registration Center</th>
-					<th>RCID</th>
-					<th>LGA</th>
-					<th>State</th>
-					<th>Observer</th>
-					<th>Supervisor</th>
-					<th>1st</th>
-					<th>2nd</th>
-					<th>3rd</th>
-					<th>IN</th>
-					<th>Edit</th>
-				</tr>
+				<thead>
+					<tr class="odd">
+						<th>SN</th>
+						<th>Observer ID</th>
+						<th>Date</th>
+						<th>LGA</th>
+						<th>SD</th>
+						<th>State</th>
+						<th>Observer</th>
+						<th>Supervisor</th>
+						<th>Status</th>
+						<th>&nbsp;</th>
+					</tr>
+				</thead>
+				<tbody>
 				{% for cl in checklists.object_list %}
 				<tr{% cycle '' ' class="odd"' %}>
-					<td>{{ cl.date|date:"SHORT_DATE_FORMAT" }}</td>
+					<td>{{ cl.sms_serial|default:"N/A" }}</td>
+					<td>{{ cl.observer.observer_id }}</td>
+					<td>{{ cl.date|date:"d/m/Y" }}</td>
 					<td>{{ cl.location.name }}</td>
-					<td>{{ cl.location.code }}</td>
 					<td>{{ cl.location.parent.name }}</td>
 					<td>{{ cl.location.parent.parent.name }}</td>
 					<td>{{ cl.observer.name }}</td>
 					<td>{{ cl.observer.supervisor.name }}</td>
 					<td>
-					<img src="/assets/img/status.png" width="16" height="16" alt="complete" />
-					</td>
-					<td>
-					{% if cl.A and cl.B and cl.C and cl.D and cl.E and cl.F and cl.G %}
-					<img src="/assets/img/status.png" width="16" height="16" alt="complete" />
+					{% if cl.A and cl.B and cl.C and cl.D and cl.E and cl.G and cl.H and cl.J and cl.K and cl.M and cl.N and cl.P and cl.Q and cl.R and cl.S and cl.T and cl.U and cl.V and cl.W and cl.X %}
+						{% if cl.F1 or cl.F2 or cl.F3 or cl.F4 or cl.F5 or cl.F6 or cl.F7 or cl.F8 or cl.F9 %}
+							<img src="/assets/img/status.png" width="16" height="16" alt="complete" />
+						{% endif %}
 					{% else %}
-					{% if cl.A or cl.B or cl.C or cl.D or cl.E or cl.F or cl.G %}
-					<img src="/assets/img/status-away.png" width="16" height="16" alt="incomplete" />
+					{% if cl.A or cl.B or cl.C or cl.D or cl.E or cl.G or cl.H or cl.J or cl.K or cl.M or cl.N or cl.P or cl.Q or cl.R or cl.S or cl.T or cl.U or cl.V or cl.W or cl.X or cl.F1 or cl.F2 or cl.F3 or cl.F4 or cl.F5 or cl.F6 or cl.F7 or cl.F8 or cl.F9 %}
+						<img src="/assets/img/status-away.png" width="16" height="16" alt="incomplete" />
 					{% else %}
-					&nbsp;
+						<img src="/assets/img/status-busy.png" width="16" height="16" alt="missing" />
 					{% endif %}
 					{% endif %}
 					</td>
-					<td>
-					{% if cl.H and cl.J and cl.K and cl.M and cl.N and cl.P and cl.Q and cl.R and cl.S and cl.T and cl.U and cl.V and cl.W and cl.X and cl.Y and cl.Z and cl.AA %}
-					<img src="/assets/img/status.png" width="16" height="16" alt="complete" />
-					{% else %}
-					{% if cl.H or cl.J or cl.K or cl.M or cl.N or cl.P or cl.Q or cl.R or cl.S or cl.T or cl.U or cl.V or cl.W or cl.X or cl.Y or cl.Z or cl.AA %}
-					<img src="/assets/img/status-away.png" width="16" height="16" alt="incomplete" />
-					{% else %}
-					&nbsp;
-					{% endif %}
-					{% endif %}
-					</td>
-					<td><a href="#">Add</a></td>
 					<td><a href="{% url psc.views.dco_checklist cl.id %}">Edit</a></td>
 				</tr>
 				{% empty %}
 				<tr>
-					<td colspan="12" class="nodata">No reports yet</td>
+					<td colspan="10" class="nodata">No reports yet</td>
 				</tr>
 				{% endfor %}
+				</tbody>
 			</table>
 		</div>
-		{% if checklist.has_other_pages %}
+		{% if checklists.has_other_pages %}
 		<div class="paginator">
-			<a href="?page={{ checklist.previous_page_number }}"><span>&laquo;</span></a>
-			{% for pagenum in checklist.paginator.page_range %}
-			<a href="?page={{ pagenum }}"><span>1</span></a>
-			{% endfor %}
-			<a href="?page={{ checklist.next_page_number }}"><span>&raquo;</span></a>
+			{% if checklists.has_previous %}
+			<a href="{% query_string "page=checklists.previous_page_number" "" %}"><span>&laquo;</span></a>
+			{% endif %}
+			<span class="current">Page {{ checklists.number }} of {{ checklists.paginator.num_pages }}</span>
+			{% if checklists.has_next %}
+			<a href="{% query_string "page=checklists.next_page_number" "" %}"><span>&raquo;</span></a>
+			{% endif %}
 		</div>
 		{% endif %}
 	</div>
