--- a/psc/templates/psc/vr_checklist_form.html
+++ b/psc/templates/psc/vr_checklist_form.html
@@ -7,8 +7,8 @@
 		<div class="block">
 		<!-- checklist details -->
 		<table>
-			<tr><td>Observer:</td><td>{{ checklist.observer.name }}</td></tr>
-			<tr><td>Date:</td><td>{{ checklist.date|date:"SHORT_DATE_FORMAT" }}</td></tr>
+			<tr><td>Observer:</td><td>{{ checklist.observer.name }} (<strong>{{ checklist.observer.observer_id  }}</strong>)</td></tr>
+			<tr><td>Date:</td><td>{{ checklist.date|date:"d/m/Y" }}</td></tr>
 		</table>
 		</div>
 		<div class="clear"></div>
