css and template modifications

--- a/psc/templates/psc/layout.html
+++ b/psc/templates/psc/layout.html
@@ -47,7 +47,15 @@
 						</ul>
 					</li>
 					<li class="secondary">
-						<a href="#" title="">System Administration</a>
+						<a href="#" title="" style="width:14.3em;text-align:left">System Administration</a>
+						<ul>
+							<li>
+								<a href="{% url psc.views.message_log %}">Message Log</a>
+							</li>
+							<li>
+								<a href="{% url psc.views.action_log %}">Action Log</a>
+							</li>
+						</ul>
 					</li>
 				</ul>
 			</div>
