--- a/psc/templates/psc/vr_incident_update_form.html
+++ b/psc/templates/psc/vr_incident_update_form.html
@@ -9,8 +9,8 @@
 		<!-- observer details group form -->
 		<div class="block">
 		<table>
-			<tr><td>Observer:</td><td>{{ incident.observer.name }}</td></tr>
-			<tr><td>Date:</td><td>{{ incident.date|date:"SHORT_DATE_FORMAT" }}</td></tr>
+			<tr><td>Observer:</td><td>{{ incident.observer.name }} (<strong>{{ incident.observer.observer_id }}</strong>)</td></tr>
+			<tr><td>Date:</td><td>{{ incident.date|date:"d/m/Y" }}</td></tr>
 		</table>
 		</div>
                 <div class="clear"></div>
@@ -202,8 +202,7 @@
 			</div>
 		</div>
                     <div class="buttons">
-                    <input type="submit" name="submit" value="Submit">
-                    <input type="reset" name="reset" value="Reset">
+                    <input type="submit" name="submit" value="Save">
                     </div>
 		
 
