--- a/psc/templates/psc/dco_incident_form.html
+++ b/psc/templates/psc/dco_incident_form.html
@@ -142,8 +142,7 @@
 		
 
                     <div class="buttons">
-                    <input type="submit" name="submit" value="Submit">
-                    <input type="reset" name="reset" value="Reset">
+                    <input type="submit" name="submit" value="Save">
                     </div>
 					<div class='clear'></div>
 	
