--- a/psc/templates/psc/dco_incident_update_form.html
+++ b/psc/templates/psc/dco_incident_update_form.html
@@ -3,24 +3,15 @@
 <form method="POST" action="{% url psc.views.dco_incident_update incident.id %}" >
 			<div class="grid_16">
 				<div class="box">
-					
-	
-
 		<h2>Observer Details</h2>
 		<!-- observer details group form -->
 		<div class="block">
 		<table>
-			<tr><td>Observer:</td><td>
-                                {{ incident.observer.name }}
-                                <input name='observer' type='hidden' value='{{ incident.observer.id }}'  >
-                                                        </td></tr>
-			<tr><td>Date:</td><td>
-                                {{ incident.date|date:"SHORT_DATE_FORMAT" }}
-                                <input name='date' type='hidden' value='{{ incident.date }}'>
-                            </td></tr>
+			<tr><td>Observer:</td><td>{{ incident.observer.name }} (<strong>{{ incident.observer.observer_id  }}</strong>)<input name='observer' type='hidden' value='{{ incident.observer.id }}'></td></tr>
+			<tr><td>Date:</td><td>{{ incident.date|date:"d/m/Y" }}<input name='date' type='hidden' value='{{ incident.date }}'></td></tr>
 		</table>
 		</div>
-                <div class="clear"></div>
+    <div class="clear"></div>
 		<h2>Critical Incidents</h2>
 		<!-- opening checklist question -->
 		<div class='block'>
@@ -160,8 +151,7 @@
 		
 
                     <div class="buttons">
-                    <input type="submit" name="submit" value="Submit">
-                    <input type="reset" name="reset" value="Reset">
+                    <input type="submit" name="submit" value="Save">
                     </div>
 					<div class='clear'></div>
 	
