--- a/psc/templates/psc/vr_incident_add_form.html
+++ b/psc/templates/psc/vr_incident_add_form.html
@@ -224,8 +224,7 @@
 		
 
                     <div class="buttons">
-                    <input type="submit" name="submit" value="Submit">
-                    <input type="reset" name="reset" value="Reset">
+                    <input type="submit" name="submit" value="Save">
                     </div>
 					<div class='clear'></div>
 	
