--- a/psc/templates/psc/vr_incident_form.html
+++ b/psc/templates/psc/vr_incident_form.html
@@ -182,8 +182,7 @@
 			</div>
 		</div>
                     <div class="buttons">
-                    <input type="submit" name="submit" value="Submit">
-                    <input type="reset" name="reset" value="Reset">
+                    <input type="submit" name="submit" value="Save">
                     </div>
 		
 
