1. Modifications to the SMS processing app to handle multiple DCO Checklists 2. Slight CSS modifications 3. Typo fixes for templates 4. Reset for filtering in the DCO checklist list 5. Sorting for the DCO checklist list 6. Fixed DCO checklist updating in the views

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -254,6 +254,7 @@ col.colC {
 th, td {
 	padding:.2em .5em;
 	text-align:left;
+	min-width: 16px;
 }
 thead th {
 	border-bottom:2px solid #888;
@@ -624,3 +625,8 @@ form .buttons input[type='submit'] {
 
 #filter li { display: inline; margin: 0; }
 #filter ul { margin-bottom: 1em; }
+
+tbody tr.extraneous th, tbody tr.extraneous td {
+	background:#ff3333;
+}
+
