--- a/psc/templates/psc/vr_checklist_list.html
+++ b/psc/templates/psc/vr_checklist_list.html
@@ -63,7 +63,7 @@
 				</tr>
 				</thead>
 				{% for cl in checklists.object_list %}
-				<tr{% cycle '' ' class="odd"' %}>
+				<tr{% cycle ' class="odd"' '' %}>
 					<td>{{ cl.observer.observer_id }}</td>
 					<td>{{ cl.date|date:"d/m/Y" }}</td>
 					<td>{{ cl.observer.location.name|default:"Uknown" }}</td>
